--- a/modules/motd/templates/motd.erb
+++ b/modules/motd/templates/motd.erb
@@ -1,3 +1,3 @@
-The operating system is <%= operatingsystem %>
-The free memory is <%= memoryfree %>
-The domain is <%= domain %>
+The operating system is <%= @operatingsystem %>
+The free memory is <%= @memoryfree %>
+The domain is <%= @domain %>
