--- a/modules/apache/templates/httpd.conf.erb
+++ b/modules/apache/templates/httpd.conf.erb
@@ -3,10 +3,11 @@ ServerTokens OS
 ServerSignature On
 TraceEnable Off
 
+ServerName "<%= @servername %>"
 ServerRoot "<%= @httpd_dir %>"
 PidFile <%= @pidfile %>
 Timeout 120
-KeepAlive Off
+KeepAlive <%= @keepalive %>
 MaxKeepAliveRequests 100
 KeepAliveTimeout 15
 
@@ -29,14 +30,14 @@ DefaultType none
 HostnameLookups Off
 ErrorLog <%= @logroot %>/<%= @error_log %>
 LogLevel warn
-<% if @sendfile #XXX Why? %>
+<% if @sendfile %>
 EnableSendfile <%= @sendfile %>
 <% end %>
 
 #Listen 80
-Include <%= @mod_dir %>/*.load
-<% if @mod_dir != @confd_dir and @mod_dir != @vhost_dir -%>
-Include <%= @mod_dir %>/*.conf
+Include <%= @mod_load_dir %>/*.load
+<% if @mod_load_dir != @confd_dir and @mod_load_dir != @vhost_load_dir -%>
+Include <%= @mod_load_dir %>/*.conf
 <% end -%>
 Include <%= @ports_file %>
 
@@ -46,8 +47,8 @@ LogFormat "%{Referer}i -> %U" referer
 LogFormat "%{User-agent}i" agent
 
 Include <%= @confd_dir %>/*.conf
-<% if @vhost_dir != @confd_dir -%>
-Include <%= @vhost_dir %>/*.conf
+<% if @vhost_load_dir != @confd_dir -%>
+Include <%= @vhost_load_dir %>/*.conf
 <% end -%>
 
 <% if @error_documents -%>
