update templates mysql modules adding @ character to vars

--- a/modules/mysql/templates/mysqlrestore.sh.erb
+++ b/modules/mysql/templates/mysqlrestore.sh.erb
@@ -10,8 +10,8 @@
 #
 ##### START CONFIG ###################################################
 
-#USER=<%= backupuser %>
-#PASS=<%= backuppassword %>
+#USER=<%= @backupuser %>
+#PASS=<%= @backuppassword %>
 USER=root
 
 DIR=/tmp/restore
@@ -19,8 +19,8 @@ DIR=/tmp/restore
 ##### STOP CONFIG ####################################################
 PATH=/usr/bin:/usr/sbin:/bin:/sbin
 
-#<% if backupcompress %>bunzip2 <% end %>< ${DIR}/mysql_backup.sql<% if backupcompress %>.bz2<% end  %> | mysql -u${USER} -p${PASS}
-<% if backupcompress %>bunzip2 <% end %>< ${DIR}/mysql_backup.sql<% if backupcompress %>.bz2<% end  %> | mysql -u${USER} 
+#<% if @backupcompress %>bunzip2 <% end %>< ${DIR}/mysql_backup.sql<% if @backupcompress %>.bz2<% end  %> | mysql -u${USER} -p${PASS}
+<% if @backupcompress %>bunzip2 <% end %>< ${DIR}/mysql_backup.sql<% if @backupcompress %>.bz2<% end  %> | mysql -u${USER} 
 
 
 
