--- a/modules/mysql/templates/mysqlbackup.sh.erb
+++ b/modules/mysql/templates/mysqlbackup.sh.erb
@@ -10,15 +10,15 @@
 #
 ##### START CONFIG ###################################################
 
-USER=<%= backupuser %>
-PASS=<%= backuppassword %>
-DIR=<%= backupdir %>
+USER=<%= @backupuser %>
+PASS=<%= @backuppassword %>
+DIR=<%= @backupdir %>
 
 ##### STOP CONFIG ####################################################
 PATH=/usr/bin:/usr/sbin:/bin:/sbin
 
 mysqldump -u${USER} -p${PASS} --opt --flush-logs --single-transaction \
- --all-databases <% if backupcompress %>| bzcat -zc <% end %>> ${DIR}/mysql_backup.sql<% if backupcompress %>.bz2<% end  %>
+ --all-databases <% if @backupcompress %>| bzcat -zc <% end %>> ${DIR}/mysql_backup.sql<% if @backupcompress %>.bz2<% end  %>
 
 
 
