--- a/modules/mysql/templates/mysqlbackup.sh.erb
+++ b/modules/mysql/templates/mysqlbackup.sh.erb
@@ -18,7 +18,7 @@ DIR=<%= @backupdir %>
 PATH=/usr/bin:/usr/sbin:/bin:/sbin
 
 
-MYSQL=$(mysql -N -u${USER} -p${PASS} <<<"SHOW DATABASES" | grep -v mysql | grep -v information_schema | grep -v test | tr "\n" " ")
+MYSQL=$(mysql -N -u${USER} -p${PASS} <<<"SHOW DATABASES" | grep -v mysql | grep -v information_schema | grep -v performance_schema | grep -v test | tr "\n" " ")
 mysqldump -u${USER} -p${PASS} --databases  --opt --flush-logs --single-transaction --skip-lock-tables ${MYSQL} <% if @backupcompress %>| bzcat -zc <% end %>> ${DIR}/mysql_backup.sql<% if @backupcompress %>.bz2<% end  %>
 
 
