--- a/modules/duplicity/templates/file-backup.sh.erb
+++ b/modules/duplicity/templates/file-backup.sh.erb
@@ -1,3 +1,3 @@
 <%= @_pre_command -%>
-duplicity --full-if-older-than <%= @_full_if_older_than -%> --s3-use-new-style --s3-european-buckets <%= @_encryption -%><%= @mysqlbackupdir -%><% [@_directories].flatten.each do |backupdir| -%> --include '<%= backupdir %>'<% end -%> --exclude '**' / <%= @_target_url -%>
+duplicity --full-if-older-than <%= @_full_if_older_than -%> --s3-use-new-style --s3-european-buckets <%= @_allow_source_mismatch -%><%= @_encryption -%><%= @mysqlbackupdir -%><% [@_directories].flatten.each do |backupdir| -%> --include '<%= backupdir %>'<% end -%> --exclude '**' / <%= @_target_url -%>
 <%= @_remove_older_than_command -%>
